# pytest-demo-app

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main.spec  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
tests/: conftest.py  hooks.py  pytest_hooks.py  test_one.py  test_two.py
toolkit/android/: adb.py
toolkit/generic_api/: pytest_api.py
unit-tests/: README.md
unit-tests/toolkit/generic_api/: test_pytest_api.py
